--- a/crm-service/crm-service/src/main/resources/application.yaml
+++ b/crm-service/crm-service/src/main/resources/application.yaml
@@ -1,1 +1,16 @@
-spring.application.name=crm-service
+spring:
+  application:
+    name: crm-service
+  datasource:
+    url: jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres # connected free tier at https://supabase.com/
+    username: postgres.wdtlqpaxiewbxosjwere
+    password: "!P4ssw02d"
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
